--- a/docs/guides/database-integration.mdx
+++ b/docs/guides/database-integration.mdx
@@ -1,29 +1,34 @@
-# 🗄️ Database Integration Guide
+# 🗄️ Database integration
 
-> Learn how to integrate any database or ORM into your BlaizeJS application using the plugin system. You'll get full control, perfect type safety, and lifecycle management while keeping the flexibility to use your preferred tools.
+> **Learn how to integrate any database or ORM into your BlaizeJS application using the plugin system**
+
+This guide teaches you the **pattern** for integrating databases — not a specific implementation. You'll get full control, perfect type safety, and lifecycle management while keeping the flexibility to use your preferred tools.
 
 ---
 
-## 🎯 Why BlaizeJS doesn't provide a database plugin
+## 🎯 Philosophy: Teaching patterns, not abstractions
 
 BlaizeJS intentionally does not provide a database plugin because:
 
 1. **Existing ORMs are excellent** — Drizzle, Prisma, and TypeORM are battle-tested with great TypeScript support
 2. **You know your needs best** — Your database setup, migrations, and query patterns are unique to your app
-3. **Teaching > Abstracting** — Understanding how to inject services gives you power to integrate anything
+3. **Teaching > Abstracting** — Understanding how to inject services gives you the power to integrate _anything_
 4. **Type safety** — Using your ORM directly preserves all its TypeScript types
 
-Instead, we'll teach you the **pattern** for integrating any database using BlaizeJS's plugin system. This same pattern works for Redis, message queues, search engines, or any external service.
+**The same pattern you learn here works for:**
+
+- Redis and caching systems
+- Message queues (RabbitMQ, Kafka)
+- Search engines (Elasticsearch, MeiliSearch)
+- Any external service
 
 ---
 
 ## 📚 What you'll learn
 
-By the end of this guide, you'll be able to:
-
-- ✅ Create a database plugin for lifecycle management
+- ✅ Create a database plugin with lifecycle management
 - ✅ Inject your database into `ctx.services` with full type safety
-- ✅ Handle connections, disconnections, and errors
+- ✅ Handle connections, disconnections, and errors gracefully
 - ✅ Publish events for real-time updates
 - ✅ Coordinate across multiple servers
 - ✅ Integrate transactions and complex queries
@@ -32,38 +37,41 @@ By the end of this guide, you'll be able to:
 
 ## 📋 Prerequisites
 
-- Basic BlaizeJS knowledge (complete the [Quick Start Guide](./quick-start.md))
+- Complete the [Quick Start Guide](../quick-start)
 - Familiarity with TypeScript
 - Understanding of SQL/databases
 - Your preferred ORM installed
 
 ---
 
-## 🚀 Choose your ORM
+## 🚀 Quick start
 
-Pick your ORM to jump to the quick start:
+**Jump to your ORM:**
 
-- [**Drizzle**](#drizzle-integration) (Recommended — functional, type-safe, lightweight)
-- [**Prisma**](#prisma-integration) (Popular, auto-generated client, great DX)
-- [**TypeORM**](#typeorm-integration) (Mature, decorator-based, feature-rich)
+| ORM         | Best For                              | Jump To                                       |
+| ----------- | ------------------------------------- | --------------------------------------------- |
+| **Drizzle** | Type-safety, lightweight, functional  | [Drizzle Integration →](#drizzle-integration) |
+| **Prisma**  | Auto-generated client, great DX       | [Prisma Integration →](#prisma-integration)   |
+| **TypeORM** | Mature, decorator-based, feature-rich | [TypeORM Integration →](#typeorm-integration) |
 
 ---
 
-## 🧠 Core concepts
+## 🧠 Understanding the plugin system
 
-### Understanding the plugin system
+### Plugins vs middleware
 
-Before we dive into code, let's understand how BlaizeJS plugins work:
+Before diving into code, understand when to use each:
 
-**Plugins vs Middleware:**
-- **Middleware** runs on every request — for per-request logic like auth, logging
-- **Plugins** run once at startup/shutdown — for managing expensive resources like database connections
+| Concept        | When to Use              | Example                                  |
+| -------------- | ------------------------ | ---------------------------------------- |
+| **Middleware** | Per-request logic        | Authentication, logging, request parsing |
+| **Plugins**    | Once at startup/shutdown | Database connections, background workers |
 
 ```typescript
 // ❌ WRONG: Creating a database connection on every request
 const dbMiddleware = createMiddleware({
   handler: async (ctx, next) => {
-    ctx.services.db = await Database.connect(); // Expensive! Every request!
+    ctx.services.db = await Database.connect(); // Expensive!
     await next();
     await ctx.services.db.close(); // Wasteful!
   },
@@ -72,31 +80,37 @@ const dbMiddleware = createMiddleware({
 // ✅ CORRECT: Plugin connects once, middleware provides access
 const databasePlugin = createPlugin<
   { connectionString: string }, // Config
-  {}, // State (none)
-  { db: Database } // Services
+  {}, // State (none needed)
+  { db: Database } // Services to inject
 >({
   name: 'database',
   version: '1.0.0',
+
   setup: ({ config, logger }) => {
     let db: Database; // Singleton in closure
 
     return {
-      register: async (server) => {
+      // Connect ONCE at startup
+      initialize: async () => {
+        db = await Database.connect(config.connectionString);
+      },
+
+      // Register middleware to provide access
+      register: async server => {
         server.use(
           createMiddleware<{}, { db: Database }>({
             name: 'database',
             handler: async (ctx, next) => {
-              ctx.services.db = db; // Just a reference — no connection!
+              ctx.services.db = db; // Just a reference!
               await next();
             },
           })
         );
       },
-      initialize: async () => {
-        db = await Database.connect(config.connectionString); // Connect ONCE
-      },
+
+      // Clean up ONCE at shutdown
       terminate: async () => {
-        await db.close(); // Clean up ONCE at shutdown
+        await db.close();
       },
     };
   },
@@ -105,58 +119,56 @@ const databasePlugin = createPlugin<
 
 ### Plugin lifecycle hooks
 
-Plugins can implement five lifecycle hooks:
+Plugins implement up to five lifecycle hooks:
 
-| Hook | When It Runs | Use For |
-|------|--------------|---------|
-| `register` | During `server.register(plugin)` | Adding middleware, routes |
-| `initialize` | Before `server.listen()` | Connecting to resources |
-| `onServerStart` | After server is listening | Verifying connections, starting timers |
-| `onServerStop` | When server begins shutdown | Stopping new work, draining queues |
-| `terminate` | During server shutdown | Closing connections, cleanup |
+| Hook            | When It Runs                     | Use For                                |
+| --------------- | -------------------------------- | -------------------------------------- |
+| `register`      | During `server.register(plugin)` | Adding middleware, routes              |
+| `initialize`    | Before `server.listen()`         | Connecting to resources                |
+| `onServerStart` | After server is listening        | Verifying connections, starting timers |
+| `onServerStop`  | When server begins shutdown      | Stopping new work, draining queues     |
+| `terminate`     | During server shutdown           | Closing connections, cleanup           |
 
 **Execution order:**
 
 ```
-Server Startup:
-  plugin1.register() → plugin2.register() → plugin3.register()
-  plugin1.initialize() → plugin2.initialize() → plugin3.initialize()
-  plugin1.onServerStart() → plugin2.onServerStart() → plugin3.onServerStart()
+Startup:
+  1. plugin1.register() → plugin2.register() → plugin3.register()
+  2. plugin1.initialize() → plugin2.initialize() → plugin3.initialize()
+  3. plugin1.onServerStart() → plugin2.onServerStart() → plugin3.onServerStart()
 
-Server Shutdown (reverse order):
-  plugin3.onServerStop() → plugin2.onServerStop() → plugin1.onServerStop()
-  plugin3.terminate() → plugin2.terminate() → plugin1.terminate()
+Shutdown (reverse order):
+  1. plugin3.onServerStop() → plugin2.onServerStop() → plugin1.onServerStop()
+  2. plugin3.terminate() → plugin2.terminate() → plugin1.terminate()
 ```
 
-> ⚠️ **Critical Pattern**: Middleware MUST be registered in the `register` hook, not in the setup function body. This ensures middleware is added during the correct lifecycle phase. Registering middleware in the wrong place will cause the plugin to fail.
+> ⚠️ **Critical:** Middleware MUST be registered in the `register` hook. Registering middleware elsewhere will cause the plugin to fail.
 
 ### Type parameters explained
-
-When creating a plugin, you specify three type parameters:
 
 ```typescript
 createPlugin<TConfig, TState, TServices>({ ... })
 ```
 
-| Generic | Purpose | Typical Usage |
-|---------|---------|---------------|
-| `TConfig` | Shape of configuration options | `{ host: string; port: number }` |
-| `TState` | What plugin's middleware adds to `ctx.state` | Usually `{}` — plugins typically add services, not state |
-| `TServices` | What plugin's middleware adds to `ctx.services` | `{ db: Database; cache: CacheService }` |
+| Generic     | Purpose                            | Example                          |
+| ----------- | ---------------------------------- | -------------------------------- |
+| `TConfig`   | Configuration options shape        | `{ host: string; port: number }` |
+| `TState`    | Adds to `ctx.state` (usually `{}`) | `{ requestId: string }`          |
+| `TServices` | Adds to `ctx.services`             | `{ db: Database; cache: Cache }` |
 
-For middleware within the plugin:
+**For middleware within plugins:**
 
 ```typescript
 createMiddleware<TState, TServices>({ ... })
 ```
 
-The middleware types must match what the plugin declares it will provide.
+The middleware types must match what the plugin declares it provides.
 
 ---
 
 ## 📖 Drizzle integration
 
-Drizzle is the recommended ORM for BlaizeJS — it's functional, type-safe, lightweight, and has excellent TypeScript support.
+**Recommended** — Drizzle is functional, type-safe, lightweight, and has excellent TypeScript support.
 
 ### Step 1: Install dependencies
 
@@ -199,12 +211,6 @@ export type Post = typeof posts.$inferSelect;
 export type NewPost = typeof posts.$inferInsert;
 ```
 
-**Why this matters:**
-- Drizzle uses a type-safe schema definition
-- Table definitions automatically infer TypeScript types
-- Export types for use in your application
-- Schema is the source of truth for both database and TypeScript
-
 ### Step 3: Create database module
 
 ```typescript
@@ -220,11 +226,11 @@ const sqlite = new Database('./data.db');
 sqlite.pragma('journal_mode = WAL');
 
 // Create Drizzle instance
-export const db = drizzle(sqlite, { 
+export const db = drizzle(sqlite, {
   schema: { users, posts },
 });
 
-// Export schema for type inference
+// Export schema for queries
 export const schema = { users, posts };
 
 // Export connection for cleanup
@@ -234,13 +240,6 @@ export const connection = sqlite;
 export type Database = typeof db;
 ```
 
-**What's happening:**
-- This module creates and configures your database connection
-- WAL mode improves performance for SQLite
-- Export `db` for use in routes
-- Export `connection` for cleanup in plugin
-- Export types for TypeScript integration
-
 ### Step 4: Create database plugin
 
 ```typescript
@@ -249,57 +248,45 @@ import { createPlugin, createMiddleware } from 'blaizejs';
 import { db, connection } from './index';
 import type { Database } from './index';
 
-// Define services that this plugin provides
 interface DatabaseServices {
   db: Database;
 }
 
-/**
- * Database plugin for BlaizeJS
- * 
- * Injects Drizzle database into ctx.services.db
- * Manages connection lifecycle
- */
 export const createDatabasePlugin = () => {
   return createPlugin<{}, {}, DatabaseServices>({
     name: 'app-database',
     version: '1.0.0',
-    
+
     setup: ({ logger }) => {
-      const pluginLogger = logger.child({ 
-        plugin: 'database' 
-      });
-      
+      const pluginLogger = logger.child({ plugin: 'database' });
+
       return {
         /**
-         * Register hook - Add middleware to inject db into ctx.services
-         * 
-         * CRITICAL: Middleware MUST be registered here, not in setup body
+         * Register - Add middleware to inject db into ctx.services
+         * CRITICAL: Must happen in register hook, not setup body
          */
-        register: async (server) => {
+        register: async server => {
           pluginLogger.debug('Registering database middleware');
-          
+
           server.use(
             createMiddleware<{}, DatabaseServices>({
               name: 'database',
               handler: async (ctx, next) => {
-                // Inject database into ctx.services
                 ctx.services.db = db;
                 await next();
               },
             })
           );
-          
+
           pluginLogger.info('Database middleware registered');
         },
-        
+
         /**
-         * Initialize hook - Verify connection before server starts
+         * Initialize - Verify connection before server starts
          */
         initialize: async () => {
           pluginLogger.info('Initializing database');
-          
-          // Verify database is accessible
+
           try {
             connection.prepare('SELECT 1').get();
             pluginLogger.info('Database connection verified');
@@ -310,23 +297,23 @@ export const createDatabasePlugin = () => {
             throw error;
           }
         },
-        
+
         /**
-         * Server start hook - Log readiness
+         * Server start - Log readiness
          */
         onServerStart: async () => {
           pluginLogger.info('Database ready');
         },
-        
+
         /**
-         * Server stop hook - Prepare for shutdown
+         * Server stop - Prepare for shutdown
          */
         onServerStop: async () => {
           pluginLogger.info('Database stopping');
         },
-        
+
         /**
-         * Terminate hook - Close connection
+         * Terminate - Close connection
          */
         terminate: async () => {
           pluginLogger.info('Closing database connection');
@@ -339,13 +326,6 @@ export const createDatabasePlugin = () => {
 };
 ```
 
-**Key points:**
-- Plugin manages the complete lifecycle of the database connection
-- `register` - Adds middleware to inject `db` into `ctx.services`
-- `initialize` - Verifies connection before server starts
-- `terminate` - Closes connection when server shuts down
-- Logger provides structured logging with context
-
 ### Step 5: Register the plugin
 
 ```typescript
@@ -356,17 +336,10 @@ import { createDatabasePlugin } from './database/plugin';
 const server = createServer({
   port: 3000,
   routesDir: './src/routes',
-})
-  .register(createDatabasePlugin());
+}).register(createDatabasePlugin());
 
 await server.listen();
-console.log('Server running on http://localhost:3000');
 ```
-
-**What happens:**
-- Import and register your database plugin
-- Plugin will automatically manage connection lifecycle
-- Database is now available in all route handlers
 
 ### Step 6: Use in routes
 
@@ -375,7 +348,6 @@ console.log('Server running on http://localhost:3000');
 import { createPostRoute } from 'blaizejs';
 import { z } from 'zod';
 import { users } from '../../database/schema';
-import type { NewUser } from '../../database/schema';
 
 const createUserSchema = z.object({
   name: z.string().min(2).max(100),
@@ -386,7 +358,7 @@ export const createUser = createPostRoute({
   schema: {
     body: createUserSchema,
   },
-  handler: async (ctx) => {
+  handler: async ctx => {
     // ctx.services.db is fully typed!
     const [user] = await ctx.services.db
       .insert(users)
@@ -395,22 +367,18 @@ export const createUser = createPostRoute({
         email: ctx.request.body.email,
       })
       .returning();
-    
-    return {
-      success: true,
-      user,
-    };
+
+    return { success: true, user };
   },
 });
 ```
 
 ```typescript
 // src/routes/users/[userId]/get.ts
-import { createGetRoute } from 'blaizejs';
+import { createGetRoute, NotFoundError } from 'blaizejs';
 import { z } from 'zod';
 import { users } from '../../../database/schema';
 import { eq } from 'drizzle-orm';
-import { NotFoundError } from 'blaizejs';
 
 export const getUser = createGetRoute({
   schema: {
@@ -422,24 +390,15 @@ export const getUser = createGetRoute({
       .from(users)
       .where(eq(users.id, parseInt(params.userId)))
       .limit(1);
-    
+
     if (!user) {
       throw new NotFoundError('User not found');
     }
-    
-    return {
-      success: true,
-      user,
-    };
+
+    return { success: true, user };
   },
 });
 ```
-
-**What you get:**
-- `ctx.services.db` is available in all route handlers
-- Full TypeScript type safety from Drizzle
-- Use Drizzle's query builder API directly
-- No abstraction layer — just your database
 
 ### Step 7: Migrations
 
@@ -465,26 +424,20 @@ pnpm drizzle-kit generate:sqlite
 pnpm drizzle-kit push:sqlite
 ```
 
-**Migration workflow:**
-- Migrations are handled by `drizzle-kit` (ORM's own tool)
-- Generate migrations when schema changes
-- Apply migrations to update database structure
-- This is separate from the plugin — handle migrations in your deployment process
-
 ---
 
 ## 📖 Prisma integration
 
-Prisma is a popular ORM with auto-generated client and excellent developer experience.
+Prisma provides an auto-generated client with excellent developer experience.
 
 ### Key differences from Drizzle
 
-| Aspect | Drizzle | Prisma |
-|--------|---------|--------|
-| Schema | TypeScript definitions | `schema.prisma` file |
-| Client | Imported directly | Generated by `prisma generate` |
-| Migrations | `drizzle-kit` | `prisma migrate` |
-| Connection | Lazy (connects on first query) | Lazy (connects on first query) |
+| Aspect     | Drizzle               | Prisma                |
+| ---------- | --------------------- | --------------------- |
+| Schema     | TypeScript files      | `schema.prisma` file  |
+| Client     | Imported directly     | Generated by CLI      |
+| Migrations | `drizzle-kit`         | `prisma migrate`      |
+| Connection | Lazy (on first query) | Lazy (on first query) |
 
 ### Step 1: Install dependencies
 
@@ -565,12 +518,12 @@ export const createDatabasePlugin = () => {
   return createPlugin<{}, {}, DatabaseServices>({
     name: 'app-database',
     version: '1.0.0',
-    
+
     setup: ({ logger }) => {
       const pluginLogger = logger.child({ plugin: 'database' });
-      
+
       return {
-        register: async (server) => {
+        register: async server => {
           server.use(
             createMiddleware<{}, DatabaseServices>({
               name: 'database',
@@ -580,24 +533,24 @@ export const createDatabasePlugin = () => {
               },
             })
           );
-          
+
           pluginLogger.info('Database middleware registered');
         },
-        
+
         initialize: async () => {
           // Prisma connects lazily, verify with simple query
           await prisma.$queryRaw`SELECT 1`;
           pluginLogger.info('Database connection verified');
         },
-        
+
         onServerStart: async () => {
           pluginLogger.info('Database ready');
         },
-        
+
         onServerStop: async () => {
           pluginLogger.info('Database stopping');
         },
-        
+
         terminate: async () => {
           await prisma.$disconnect();
           pluginLogger.info('Database connection closed');
@@ -624,14 +577,14 @@ export const createUser = createPostRoute({
   schema: {
     body: createUserSchema,
   },
-  handler: async (ctx) => {
+  handler: async ctx => {
     const user = await ctx.services.db.user.create({
       data: {
         name: ctx.request.body.name,
         email: ctx.request.body.email,
       },
     });
-    
+
     return { success: true, user };
   },
 });
@@ -749,12 +702,12 @@ export const createDatabasePlugin = () => {
   return createPlugin<{}, {}, DatabaseServices>({
     name: 'app-database',
     version: '1.0.0',
-    
+
     setup: ({ logger }) => {
       const pluginLogger = logger.child({ plugin: 'database' });
-      
+
       return {
-        register: async (server) => {
+        register: async server => {
           server.use(
             createMiddleware<{}, DatabaseServices>({
               name: 'database',
@@ -764,23 +717,23 @@ export const createDatabasePlugin = () => {
               },
             })
           );
-          
+
           pluginLogger.info('Database middleware registered');
         },
-        
+
         initialize: async () => {
           await AppDataSource.initialize();
           pluginLogger.info('Database connection initialized');
         },
-        
+
         onServerStart: async () => {
           pluginLogger.info('Database ready');
         },
-        
+
         onServerStop: async () => {
           pluginLogger.info('Database stopping');
         },
-        
+
         terminate: async () => {
           await AppDataSource.destroy();
           pluginLogger.info('Database connection closed');
@@ -808,16 +761,16 @@ export const createUser = createPostRoute({
   schema: {
     body: createUserSchema,
   },
-  handler: async (ctx) => {
+  handler: async ctx => {
     const userRepository = ctx.services.db.getRepository(User);
-    
+
     const user = userRepository.create({
       name: ctx.request.body.name,
       email: ctx.request.body.email,
     });
-    
+
     await userRepository.save(user);
-    
+
     return { success: true, user };
   },
 });
@@ -827,17 +780,18 @@ export const createUser = createPostRoute({
 
 ## 🚀 Advanced patterns
 
-### Pattern 1: Event emission for real-time updates
+### Real-time updates with EventBus
 
-Combine database operations with EventBus to enable real-time updates across your application.
+Combine database operations with EventBus for real-time coordination across your application.
 
-**When to use:**
+**Use cases:**
+
 - User notifications (new follower, new message)
-- Real-time dashboards (sales updates, user activity)
-- Cache invalidation (multi-server coordination)
+- Real-time dashboards (sales updates, activity feeds)
+- Cache invalidation across multiple servers
 - SSE streaming (live updates to connected clients)
 
-**Example:**
+**Example with Drizzle:**
 
 ```typescript
 // src/routes/users/create.ts
@@ -854,8 +808,8 @@ export const createUser = createPostRoute({
   schema: {
     body: createUserSchema,
   },
-  handler: async (ctx) => {
-    // Create user
+  handler: async ctx => {
+    // Create user with Drizzle
     const [user] = await ctx.services.db
       .insert(users)
       .values({
@@ -863,7 +817,7 @@ export const createUser = createPostRoute({
         email: ctx.request.body.email,
       })
       .returning();
-    
+
     // Publish event for real-time coordination
     await ctx.eventBus.publish('user:created', {
       userId: user.id,
@@ -871,43 +825,45 @@ export const createUser = createPostRoute({
       email: user.email,
       timestamp: Date.now(),
     });
-    
+
     return { success: true, user };
   },
 });
 ```
 
+**SSE endpoint for real-time updates:**
+
 ```typescript
-// src/routes/users/stream.ts - SSE endpoint for real-time updates
+// src/routes/users/stream.ts
 import { createSSERoute } from 'blaizejs';
 
 export const userStream = createSSERoute({
   handler: async (stream, ctx) => {
-    ctx.logger.info('[SSE] Client connected to user stream');
-    
+    ctx.logger.info('Client connected to user stream');
+
     stream.send('connected', {
       message: 'Connected to user updates',
       timestamp: new Date().toISOString(),
     });
-    
+
     // Subscribe to user events
-    const unsubscribe = ctx.eventBus.subscribe('user:created', (event) => {
+    const unsubscribe = ctx.eventBus.subscribe('user:created', event => {
       stream.send('user-created', {
         user: event.data,
         timestamp: new Date(event.timestamp).toISOString(),
       });
     });
-    
-    // Heartbeat
+
+    // Heartbeat every 30 seconds
     const heartbeat = setInterval(() => {
       stream.send('heartbeat', {
         timestamp: new Date().toISOString(),
       });
     }, 30000);
-    
+
     // Cleanup on disconnect
     stream.onClose(() => {
-      ctx.logger.info('[SSE] Client disconnected from user stream');
+      ctx.logger.info('Client disconnected from user stream');
       unsubscribe();
       clearInterval(heartbeat);
     });
@@ -915,15 +871,9 @@ export const userStream = createSSERoute({
 });
 ```
 
-**Key points:**
-- EventBus is always available in BlaizeJS (core primitive)
-- Publish events after database mutations
-- Subscribe to events in SSE routes for real-time updates
-- Don't forget cleanup (unsubscribe, clear intervals)
+### Database helpers with automatic events
 
-### Pattern 2: Helper functions with events
-
-Create helper functions that combine database operations with automatic event emission.
+Create helper functions that combine Drizzle operations with automatic event emission:
 
 ```typescript
 // src/database/helpers.ts
@@ -937,57 +887,48 @@ export function createDatabaseHelpers(eventBus: EventBus) {
   return {
     users: {
       async create(data: NewUser): Promise<User> {
-        const [user] = await db
-          .insert(users)
-          .values(data)
-          .returning();
-        
-        // Automatically emit event
+        const [user] = await db.insert(users).values(data).returning();
+
         await eventBus.publish('user:created', {
           userId: user.id,
           data: user,
         });
-        
+
         return user;
       },
-      
+
       async update(id: number, data: Partial<NewUser>): Promise<User> {
-        const [user] = await db
-          .update(users)
-          .set(data)
-          .where(eq(users.id, id))
-          .returning();
-        
+        const [user] = await db.update(users).set(data).where(eq(users.id, id)).returning();
+
         await eventBus.publish('user:updated', {
           userId: id,
           data: user,
         });
-        
+
         return user;
       },
-      
+
       async delete(id: number): Promise<void> {
-        await db
-          .delete(users)
-          .where(eq(users.id, id));
-        
+        await db.delete(users).where(eq(users.id, id));
+
         await eventBus.publish('user:deleted', {
           userId: id,
         });
       },
     },
-    
-    // Raw database access (no events)
+
+    // Raw database access when needed
     db,
   };
 }
 ```
 
+**Update plugin to inject helpers:**
+
 ```typescript
-// Update plugin to inject helpers
-register: async (server) => {
+register: async server => {
   const dbWithHelpers = createDatabaseHelpers(server.eventBus);
-  
+
   server.use(
     createMiddleware<{}, { db: ReturnType<typeof createDatabaseHelpers> }>({
       name: 'database',
@@ -997,41 +938,38 @@ register: async (server) => {
       },
     })
   );
-}
+};
 ```
 
+**Use in routes:**
+
 ```typescript
-// Use in routes
 export const createUser = createPostRoute({
-  handler: async (ctx) => {
+  schema: {
+    body: createUserSchema,
+  },
+  handler: async ctx => {
     // Helper automatically emits event
     const user = await ctx.services.db.users.create({
       name: ctx.request.body.name,
       email: ctx.request.body.email,
     });
-    
+
     return { success: true, user };
   },
 });
 ```
 
-**Benefits:**
-- Helpers reduce boilerplate
-- Consistent event emission across your app
-- Still have access to raw db for complex queries
-- Update TypeScript types to reflect new service shape
+### Transaction support
 
-### Pattern 3: Transaction support
-
-Handle multi-step database operations with transaction support.
+Handle multi-step operations atomically:
 
 ```typescript
 // src/routes/posts/create.ts
-import { createPostRoute } from 'blaizejs';
+import { createPostRoute, NotFoundError } from 'blaizejs';
 import { z } from 'zod';
 import { posts, users } from '../../database/schema';
 import { eq } from 'drizzle-orm';
-import { NotFoundError } from 'blaizejs';
 
 const createPostSchema = z.object({
   userId: z.number(),
@@ -1043,20 +981,20 @@ export const createPost = createPostRoute({
   schema: {
     body: createPostSchema,
   },
-  handler: async (ctx) => {
+  handler: async ctx => {
     // Use Drizzle's transaction API
-    const result = await ctx.services.db.transaction(async (tx) => {
+    const result = await ctx.services.db.transaction(async tx => {
       // Verify user exists
       const [user] = await tx
         .select()
         .from(users)
         .where(eq(users.id, ctx.request.body.userId))
         .limit(1);
-      
+
       if (!user) {
         throw new NotFoundError('User not found');
       }
-      
+
       // Create post
       const [post] = await tx
         .insert(posts)
@@ -1066,36 +1004,31 @@ export const createPost = createPostRoute({
           content: ctx.request.body.content,
         })
         .returning();
-      
+
       return { user, post };
     });
-    
-    // Transaction committed - emit event AFTER
+
+    // Transaction committed - emit event AFTER success
     await ctx.eventBus.publish('post:created', {
       postId: result.post.id,
       userId: result.user.id,
       data: result.post,
     });
-    
-    return {
-      success: true,
-      post: result.post,
-    };
+
+    return { success: true, post: result.post };
   },
 });
 ```
 
 **Key points:**
-- Use your ORM's transaction API
+
 - All operations in transaction are atomic
 - Emit events AFTER transaction commits
 - If transaction fails, no events are emitted
 
-### Pattern 4: Multi-server coordination
+### Multi-server coordination
 
-Use EventBus with Redis adapter for cache invalidation across multiple servers.
-
-**Scenario:** You have 3 servers behind a load balancer. User updates their profile on Server A. Cache needs to be invalidated on all servers.
+Use EventBus with Redis adapter for cache invalidation across multiple servers:
 
 ```typescript
 // Server setup with Redis EventBus
@@ -1122,6 +1055,8 @@ await server.eventBus.setAdapter(redisAdapter);
 await server.listen(3000);
 ```
 
+**Update user route:**
+
 ```typescript
 // src/routes/users/[userId]/update.ts
 import { createPutRoute } from 'blaizejs';
@@ -1141,7 +1076,7 @@ export const updateUser = createPutRoute({
   },
   handler: async (ctx, params) => {
     const userId = parseInt(params.userId);
-    
+
     // Update user in database
     const [user] = await ctx.services.db
       .update(users)
@@ -1151,40 +1086,40 @@ export const updateUser = createPutRoute({
       })
       .where(eq(users.id, userId))
       .returning();
-    
+
     // Publish event - propagates to ALL servers via Redis
     await ctx.eventBus.publish('user:updated', {
       userId,
       data: user,
     });
-    
+
     return { success: true, user };
   },
 });
 ```
 
+**All servers subscribe to invalidate cache:**
+
 ```typescript
-// All servers subscribe to invalidate cache
-server.eventBus.subscribe('user:updated', async (event) => {
+server.eventBus.subscribe('user:updated', async event => {
   // This runs on ALL servers
   await ctx.services.cache.delete(`user:${event.data.userId}`);
-  console.log(`[${server.serverId}] Invalidated cache for user ${event.data.userId}`);
+  console.log(`[${server.serverId}] Cache invalidated for user ${event.data.userId}`);
 });
 ```
 
 **How it works:**
+
 - Without Redis adapter: Events only on current server
 - With Redis adapter: Events propagate to all servers
 - Each server independently invalidates its cache
-- Ensures cache consistency across cluster
-
-> 📚 **Learn More:** See [EventBus documentation](./eventbus.md) for Redis adapter setup
+- Ensures cache consistency across your cluster
 
 ---
 
 ## 🐛 Troubleshooting
 
-### Issue: "Property 'db' does not exist on type 'Services'"
+### "Property 'db' does not exist on type 'Services'"
 
 **Cause:** TypeScript doesn't know about your database service.
 
@@ -1206,7 +1141,7 @@ createMiddleware<{}, DatabaseServices>({ ... })
 
 ---
 
-### Issue: "Database connection closed" errors
+### "Database connection closed" errors
 
 **Cause:** Database disconnected before request completed.
 
@@ -1214,18 +1149,18 @@ createMiddleware<{}, DatabaseServices>({ ... })
 
 ```typescript
 terminate: async () => {
-  // This should only run when server.close() is called
+  // Only runs when server.close() is called
   await connection.close();
-}
+};
 ```
 
 ---
 
-### Issue: Middleware not injecting database
+### Middleware not injecting database
 
 **Cause:** Middleware registered in wrong lifecycle hook.
 
-**Solution:** Register middleware in `register` hook, NOT in setup body:
+**Solution:** Register middleware in `register` hook:
 
 ```typescript
 // ✅ Correct
@@ -1235,16 +1170,16 @@ return {
   },
 }
 
-// ❌ Wrong
+// ❌ Wrong - server not available in setup body
 setup: ({ logger }) => {
-  server.use(middleware); // server not available here
+  server.use(middleware); // Error!
   return { ... };
 }
 ```
 
 ---
 
-### Issue: TypeScript types not working
+### TypeScript types not working
 
 **Cause:** Database type not exported or imported correctly.
 
@@ -1265,16 +1200,16 @@ interface DatabaseServices {
 
 ---
 
-## ⚡ Performance optimization
+## ⚡ Performance tips
 
 ### Connection pooling
 
-**For PostgreSQL/MySQL:**
+**For PostgreSQL with Drizzle:**
 
 ```typescript
-// PostgreSQL with pool
 import { Pool } from 'pg';
 import { drizzle } from 'drizzle-orm/node-postgres';
+import * as schema from './schema';
 
 const pool = new Pool({
   host: 'localhost',
@@ -1290,22 +1225,18 @@ const pool = new Pool({
 export const db = drizzle(pool, { schema });
 ```
 
-**Configuration:**
-- Pool reuses connections
-- `max`: Maximum concurrent connections
-- `idleTimeoutMillis`: Close idle connections
-- `connectionTimeoutMillis`: Fail fast on connection issues
-
 ### Query optimization
 
 **Select specific columns:**
 
 ```typescript
+import { users } from './schema';
+
 // ❌ Don't select everything
-const users = await ctx.services.db.select().from(users);
+const allUsers = await ctx.services.db.select().from(users);
 
 // ✅ Select only needed columns
-const users = await ctx.services.db
+const userNames = await ctx.services.db
   .select({
     id: users.id,
     name: users.name,
@@ -1316,6 +1247,9 @@ const users = await ctx.services.db
 **Use prepared statements:**
 
 ```typescript
+import { users } from './schema';
+import { eq, sql } from 'drizzle-orm';
+
 // Drizzle automatically uses prepared statements
 const getUserById = ctx.services.db
   .select()
@@ -1323,7 +1257,7 @@ const getUserById = ctx.services.db
   .where(eq(users.id, sql.placeholder('id')))
   .prepare();
 
-// Reuse prepared statement
+// Reuse prepared statement efficiently
 const user1 = await getUserById.execute({ id: 1 });
 const user2 = await getUserById.execute({ id: 2 });
 ```
@@ -1333,16 +1267,21 @@ const user2 = await getUserById.execute({ id: 2 });
 **Cache frequently accessed data:**
 
 ```typescript
+import { createGetRoute, NotFoundError } from 'blaizejs';
+import { z } from 'zod';
+import { users } from '../../database/schema';
+import { eq } from 'drizzle-orm';
+
 export const getUser = createGetRoute({
   schema: {
     params: z.object({ userId: z.string() }),
   },
   handler: async (ctx, params) => {
     const cacheKey = `user:${params.userId}`;
-    
+
     // Check cache first
     let user = await ctx.services.cache.get(cacheKey);
-    
+
     if (!user) {
       // Cache miss - query database
       const [dbUser] = await ctx.services.db
@@ -1350,7 +1289,7 @@ export const getUser = createGetRoute({
         .from(users)
         .where(eq(users.id, parseInt(params.userId)))
         .limit(1);
-      
+
       if (dbUser) {
         // Store in cache for 5 minutes
         await ctx.services.cache.set(cacheKey, JSON.stringify(dbUser), 300);
@@ -1359,11 +1298,11 @@ export const getUser = createGetRoute({
     } else {
       user = JSON.parse(user);
     }
-    
+
     if (!user) {
       throw new NotFoundError('User not found');
     }
-    
+
     return { success: true, user };
   },
 });
@@ -1372,23 +1311,37 @@ export const getUser = createGetRoute({
 **Invalidate cache on update:**
 
 ```typescript
+import { createPutRoute } from 'blaizejs';
+import { z } from 'zod';
+import { users } from '../../database/schema';
+import { eq } from 'drizzle-orm';
+
+const updateUserSchema = z.object({
+  name: z.string().min(2).max(100),
+  email: z.string().email(),
+});
+
 export const updateUser = createPutRoute({
+  schema: {
+    params: z.object({ userId: z.string() }),
+    body: updateUserSchema,
+  },
   handler: async (ctx, params) => {
     const userId = parseInt(params.userId);
-    
+
     // Update database
     const [user] = await ctx.services.db
       .update(users)
       .set(ctx.request.body)
       .where(eq(users.id, userId))
       .returning();
-    
+
     // Invalidate cache
     await ctx.services.cache.delete(`user:${userId}`);
-    
+
     // Emit event for multi-server coordination
     await ctx.eventBus.publish('user:updated', { userId });
-    
+
     return { success: true, user };
   },
 });
@@ -1398,31 +1351,32 @@ export const updateUser = createPutRoute({
 
 ## 🔗 Related documentation
 
-- [Plugin System](./plugins.md) — Deep dive into plugin architecture
-- [EventBus](./eventbus.md) — Real-time event coordination
-- [SSE](./sse.md) — Server-sent events for real-time updates
-- [Middleware](./middleware.md) — Request/response processing
-- [Type System](./type-system.md) — How types flow through BlaizeJS
+- [Plugin system](./plugins) — Deep dive into plugin architecture
+- [EventBus](./eventbus) — Real-time event coordination
+- [Server-Sent Events](./sse) — Real-time updates to clients
+- [Middleware](./middleware) — Request/response processing
 
 ---
 
 ## ✅ Summary
 
-You've learned how to:
+You've learned:
 
-- ✅ Create a database plugin with lifecycle management
-- ✅ Inject services with full type safety
-- ✅ Handle connections and cleanup properly
-- ✅ Publish events for real-time updates
-- ✅ Coordinate across multiple servers
-- ✅ Optimize queries and implement caching
+- ✅ How to create a database plugin with lifecycle management
+- ✅ How to inject services with full type safety
+- ✅ How to handle connections and cleanup properly
+- ✅ How to publish events for real-time updates
+- ✅ How to coordinate across multiple servers
+- ✅ How to optimize queries and implement caching
+
+**This same pattern works for any external service** — Redis, message queues, search engines, or custom integrations. You now have the power to integrate anything into BlaizeJS!
+
+---
 
 **Next steps:**
 
-1. Choose your ORM (Drizzle recommended)
+1. Choose your ORM ([Drizzle](#drizzle-integration) recommended)
 2. Follow the integration guide
 3. Add real-time updates with EventBus
 4. Implement caching for performance
 5. Deploy with confidence!
-
-> 💡 **Remember:** This same pattern works for any external service — Redis, message queues, search engines, or custom integrations. You now have the power to integrate anything into BlaizeJS!
